2008-09-27  Benjamin Berg  <benjamin@sipsolutions.net>

	* configure.ac:
	Version bump to 2.17.0.

2008-09-27  Benjamin Berg  <benjamin@sipsolutions.net>

	* test/torturetest.c:
	Add the new icon view detail strings to the torture tester.

2008-09-27  Denis Washington  <denisw@svn.gnome.org>

	* engines/clearlooks/src/clearlooks_draw.c:
	* engines/clearlooks/src/clearlooks_draw_glossy.c:
	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	* engines/clearlooks/src/clearlooks_style.c:
	* engines/clearlooks/src/clearlooks_types.h:
	Customize drawing of the selection rectangles around GtkIconView
	items introduced in GTK+ trunk. (Bug #553575)


2008-09-22  Benjamin Berg  <benjamin@sipsolutions.net>

	* NEWS:
	* configure.ac:
	Update for 2.16.0.

2008-09-05  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_spinbutton):
	Made the horizontal line in the spinbutton smaller.

2008-09-02  Benjamin Berg  <benjamin@sipsolutions.net>

	* configure.ac:
	Postrelease version bump to 2.15.5.

2008-09-02  Benjamin Berg  <benjamin@sipsolutions.net>

	* NEWS:
	Update for 2.15.4.

2008-09-01  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_rc_style.c:
	* engines/clearlooks/src/clearlooks_rc_style.h:
	* engines/clearlooks/src/clearlooks_style.c:
	* engines/clearlooks/src/clearlooks_style.h:
	* engines/clearlooks/src/clearlooks_theme_main.c:
	Use the G_DEFINE_DYNAMIC_TYPE macro provided by GLib.
	Bug #549830 Patch by Christian Dywan.

2008-08-20  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* themes/Clearlooks/gtk-2.0/gtkrc:
	Inreased menuitem separator spacing from 5 to 7

2008-08-20  Benjamin Berg  <benjamin@sipsolutions.net>

	* themes/Clearlooks/gtk-2.0/gtkrc:
	Fix the separator height, which was broken by the last commit.

2008-08-19  Benjamin Berg  <benjamin@sipsolutions.net>

	* themes/Clearlooks/gtk-2.0/gtkrc:
	Rework the gtkrcs so that all clearlooks based gtkrcs match better.
