@@ -1,3 +1,8 @@
+2008-10-06  Thomas Wood  <thos@gnome.org>
+
+	* engines/mist/src/mist-style.c: (mist_style_draw_focus),
+	(mist_style_class_init): Style the focus indicator in Mist
+
 2008-09-27  Benjamin Berg  <benjamin@sipsolutions.net>
 
 	* configure.ac:
